Remove usage of deprecated new Double(String value) constructor
Fixes compiler warning: The constructor Double(String) is deprecated
Constructor will be deprecated with Java 9ff

Change-Id: I1dd010a0ec0fe8262ebf965299016ab38465274f
Reviewed-on: https://git.eclipse.org/r/147168
Tested-by: CI Bot
Reviewed-by: Paolo Bazzi <paolo.bazzi@bsi-software.com>